# food-advisor-rust

./: .env  Cargo.toml  diesel.toml
.github/workflows/: build.yaml  release.yaml
migrations/2024-07-06-150237_create_recipes/: down.sql  up.sql
src/: main.rs
src/api/: category.rs  mod.rs  model.rs  recipe.rs
src/model/: category.rs  mod.rs  recipe.rs
src/repository/: category.rs  mod.rs  model.rs  recipe.rs  scheme.rs
src/service/: category.rs  mod.rs  recipe.rs
src/state/: mod.rs
